// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when building domain entity should have a domain entity level source map with correct line, column, length date 1`] = `
DomainEntitySourceMap {
  "allowPrimaryKeyUpdates": Object {
    "column": 4,
    "line": 5,
    "tokenText": "allow primary key updates",
  },
  "documentation": Object {
    "column": 4,
    "line": 3,
    "tokenText": "documentation",
  },
  "metaEdId": Object {
    "column": 27,
    "line": 2,
    "tokenText": "[1]",
  },
  "metaEdName": Object {
    "column": 16,
    "line": 2,
    "tokenText": "EntityName",
  },
  "type": Object {
    "column": 2,
    "line": 2,
    "tokenText": "Domain Entity",
  },
}
`;

exports[`when building domain entity should have a namespaceInfo level source map with correct line, column, length date 1`] = `
Object {
  "column": 0,
  "line": 1,
  "tokenText": "Begin Namespace",
}
`;

exports[`when building domain entity with invalid trailing text should have extraneous input error 1`] = `
Array [
  "extraneous input 'TrailingText' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 0, line: 15, token: TrailingText",
]
`;

exports[`when building domain entity with lowercase domain entity name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Domain Entityentity', column: 16, line: 2, token: entity",
]
`;

exports[`when building domain entity with lowercase project extension name should have an extraneous input error 1`] = `
Array [
  "extraneous input 'project' expecting {'core', ID}, column: 26, line: 1, token: project",
]
`;

exports[`when building domain entity with missing begin namespace should have mismatched input error 1`] = `
Array [
  "mismatched input 'Domain Entity' expecting 'Begin Namespace', column: 0, line: 1, token: Domain Entity",
]
`;

exports[`when building domain entity with missing documentation should have mismatched input error 1`] = `
Array [
  "mismatched input 'integer' expecting 'documentation', column: 4, line: 3, token: integer",
]
`;

exports[`when building domain entity with missing domain entity name should have no viable alternative error 1`] = `
Array [
  "no viable alternative at input 'Domain Entity[1]', column: 17, line: 2, token: [1]",
]
`;

exports[`when building domain entity with missing end namespace should have extraneous input eof error 1`] = `
Array [
  "extraneous input '<EOF>' expecting {'Abstract Entity', 'Association', 'End Namespace', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 19, line: 14, token: <EOF>",
]
`;

exports[`when building domain entity with missing metaed id value should have token recognition error 1`] = `
Array [
  "token recognition error at: '[]', column: 27, line: 2, token: ",
]
`;

exports[`when building domain entity with missing namespace name should have missing namespace id error 1`] = `
Array [
  "missing NAMESPACE_ID at 'ProjectExtension', column: 17, line: 1, token: ProjectExtension",
]
`;

exports[`when building domain entity with missing property should have mismatched input error 1`] = `
Array [
  "mismatched input 'End Namespace' expecting {'association', 'bool', 'choice', 'common', 'common extension', 'currency', 'date', 'decimal', 'descriptor', 'domain entity', 'duration', 'enumeration', 'inline common', 'integer', 'percent', 'shared decimal', 'shared integer', 'shared short', 'shared string', 'short', 'string', 'time', 'year', 'allow primary key updates'}, column: 0, line: 5, token: End Namespace",
]
`;

exports[`when building domain entity with missing top level entity property should have mismatched input error 1`] = `
Array [
  "mismatched input 'documentation' expecting {'Abstract Entity', 'Association', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 2, line: 2, token: documentation",
]
`;

exports[`when building domain entity with uppercase namespace name should have missing namespace id and extraneous input error 1`] = `
Array [
  "missing NAMESPACE_ID at 'Namespace', column: 16, line: 1, token: Namespace",
  "extraneous input 'ProjectExtension' expecting {'Abstract Entity', 'Association', 'Choice', 'Common', 'Descriptor', 'Domain', 'Domain Entity', 'Enumeration', 'Interchange', 'Inline Common', 'Shared Decimal', 'Shared Integer', 'Shared Short', 'Shared String', 'Subdomain'}, column: 26, line: 1, token: ProjectExtension",
]
`;
